package com.apuliasoft.designpattern.observer.explanation;

public interface IObserver {
    void update();
}